--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
     "@psf/bch-js": "^4.3.0",
     "electron-serve": "^1.0.0",
     "electron-store": "^6.0.1",
