--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@psf/bch-js": "^4.3.0",
     "electron-serve": "^1.0.0",
     "electron-store": "^6.0.1",
+    "react-hook-form": "^6.14.0",
     "slp-cli-wallet": "^2.2.1"
   },
   "devDependencies": {
